[package]
name = "r3bl_terminal_async"
version = "0.0.1"
license = "Apache-2.0"
description = "A minimal readline implemenation with multiline, async support, and progress bar."
documentation = "https://docs.rs/r3bl_terminal_async"
repository = "https://github.com/nazmulidris/r3bl_terminal_async"
readme = "README.md"
edition = "2021"

[dependencies]
# Terminal output.
crossterm = { version = "0.27.0", features = ["event-stream"] }           # EventStream
futures-util = "0.3.30"                                                   # Needed for crossterm EventStream
r3bl_tuify = { path = "/home/nazmul/github/r3bl-open-core/tuify" }
r3bl_tui = { path = "/home/nazmul/github/r3bl-open-core/tui" }
r3bl_rs_utils_core = { path = "/home/nazmul/github/r3bl-open-core/core" }

# Unicode support.
unicode-segmentation = "1.10"
unicode-width = "0.1"

# Enum to string generation.
strum = "0.26"
strum_macros = "0.26"

# Error handling.
thiserror = "1.0.58"
miette = { version = "7.2.0", features = ["fancy"] }
pretty_assertions = "1.4.0"

# Tokio / Tracing / Logging.
# https://tokio.rs/tokio/topics/tracing
# https://tokio.rs/tokio/topics/tracing-next-steps
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"

# Async stream for DI and testing.
futures-core = "0.3"
async-stream = "0.3.5"
strip-ansi-escapes = "0.2.0"

[features]
default = ["emacs"]
emacs = []
